[package]
name = "llm-chain-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm-chain = "0.12.3"
llm-chain-openai = "0.12.3"
reqwest = { version = "0.11.4", features = ["json"] }
serde_json = "1.0.67"
anyhow = "1.0"
tokio = { version = "1.10.0", features = ["full"] }

